MVVM初期整理，有点乱

--- a/app/src/main/res/layout/activity_main_kt.xml
+++ b/app/src/main/res/layout/activity_main_kt.xml
@@ -5,10 +5,10 @@
     <data>
         <variable
             name="vm"
-            type="com.onion99.studyinxmiles.kotlin.vm.MainViewModel" />
+            type="com.onion.android.kotlin.vm.MainViewModel" />
         <variable
             name="adapter"
-            type="com.onion99.studyinxmiles.kotlin.ui.adapter.PokemonAdapter" />
+            type="com.onion.android.kotlin.ui.adapter.PokemonAdapter" />
     </data>
     <!-- clipToPadding 控件的绘制区域是否在padding里面的，true的情况下如果你设置了padding那么绘制的区域就往里 缩-->
     <!-- clipChildren 指子控件是否超过padding区域，这两个属性默认是true的，所以在设置了padding情况下，默认滚动是在 padding内部的-->
