--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="pokemon"
-            type="com.onion99.studyinxmiles.kotlin.model.Pokemon" />
+            type="com.onion.android.kotlin.model.Pokemon" />
     </data>
 
     <com.skydoves.transformationlayout.TransformationLayout
