--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="primary_custom_translucent">#40388E3C</color>
 
     <color name="grey_3">#f7f7f7</color>
+    <color name="grey_11">#e6e6e6</color>
     <color name="blue_grey_600">#546E7A</color>
     <color name="grey_20">#cccccc</color>
     <color name="grey_40">#999999</color>
@@ -28,7 +29,9 @@
     <color name="golden_gate">#00b4ca</color>
 
     <color name="colorPrimary">#D53A47</color>
+    <color name="plex_colorPrimary">#1976D2</color>
     <color name="colorPrimaryDark">#D53A47</color>
+    <color name="plex_colorPrimaryDark">#1565C0</color>
     <color name="colorAccent">#D53A47</color>
     <color name="background">#2B292B</color>
     <color name="background800">#424242</color>
@@ -68,4 +71,9 @@
     <color name="ground">#AD7235</color>
     <color name="md_blue_100">#81D4fA</color>
     <color name="md_blue_200">#0091EA</color>
+
+    <!-- Plex -->
+    <color name="main_color">#00b4ca</color>
+    <color name="main_orange">#fff9930d</color>
+    <color name="primary_dark">#0288D1</color>
 </resources>
