--- a/app/src/main/res/layout/plex_fragment_home.xml
+++ b/app/src/main/res/layout/plex_fragment_home.xml
@@ -7,5 +7,94 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <FrameLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/grey_1000"
+            android:orientation="vertical">
+            <!-- AppBarLayout -->
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:translationZ="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:elevation="0dp">
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:gravity="center"
+                    app:contentInsetStartWithNavigation="0dp"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:theme="@style/Toolbar.Light">
+                        <ImageView
+                            android:id="@+id/logo_image_top"
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:contentDescription="@string/image" />
+                </androidx.appcompat.widget.Toolbar>
+            </com.google.android.material.appbar.AppBarLayout>
+            <!-- Content -->
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:id="@+id/main_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!-- refresh -->
+                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                    android:id="@+id/swipe_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <!-- ScrollView -->
+                    <androidx.core.widget.NestedScrollView
+                        android:id="@+id/scrollView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/grey_1000"
+                        android:clipToPadding="false"
+                        android:paddingBottom="@dimen/spacing_large"
+                        android:visibility="gone"
+                        android:scrollbars="none"
+                        android:scrollingCache="true">
+                        <!-- Only Load a View Group -->
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rv_featured"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                app:reverseLayout="true"
+                                android:nestedScrollingEnabled="false" />
+                            <me.relex.circleindicator.CircleIndicator2
+                                android:id="@+id/indicator"
+                                android:layout_width="match_parent"
+                                android:layout_height="48dp"
+                                android:layout_gravity="bottom"
+                                android:layout_marginBottom="5dp"
+                                app:ci_animator="@anim/plex_indicator_animator"
+                                app:ci_animator_reverse="@anim/plex_indicator_animator_reverse"
+                                app:ci_drawable="@color/golden_gate"
+                                app:ci_drawable_unselected="@drawable/unselected_black_radius_square"
+                                app:ci_height="2dp"
+                                app:ci_margin="3dp"
+                                app:ci_width="8dp" />
+                        </LinearLayout>
+                    </androidx.core.widget.NestedScrollView>
+                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <!-- Loading State -->
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminateTint="@color/main_color"
+                />
+        </FrameLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
