继续优化Dagger处理，主页面加载，网络请求处理

--- a/app/src/main/res/layout/plex_fragment_home.xml
+++ b/app/src/main/res/layout/plex_fragment_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
@@ -11,7 +11,6 @@
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/grey_1000"
             android:orientation="vertical">
             <!-- AppBarLayout -->
             <com.google.android.material.appbar.AppBarLayout
@@ -53,7 +52,6 @@
                         android:id="@+id/scrollView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/grey_1000"
                         android:clipToPadding="false"
                         android:paddingBottom="@dimen/spacing_large"
                         android:visibility="gone"
@@ -93,8 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:indeterminateTint="@color/main_color"
-                />
+                android:indeterminateTint="@color/main_color" />
         </FrameLayout>
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
