--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -78,7 +78,8 @@
     <color name="main_color">#00b4ca</color>
     <color name="main_orange">#fff9930d</color>
     <color name="primary_dark">#0288D1</color>
-    <color name="plex_bottom_navgation_bg">#121212</color>
+    <color name="plex_bottom_navgation_bg">#232325</color>
+    <color name="plex_item_bg">#121212</color>
     <color name="fragment_featured_end">#1a1a1a</color>
     <color name="fragment_featured_overlay_center">#6626262d</color>
     <color name="fragment_featured_overlay_start">#0026262d</color>
