--- a/app/src/main/res/color/plex_bottom_navgation_state_press.xml
+++ b/app/src/main/res/color/plex_bottom_navgation_state_press.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding ="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#F44336" android:state_checked="true" />
-    <item android:color="#494747" android:state_checked="false" />
+    <item android:color="#00B4CA" android:state_checked="true" />
+    <item android:color="#999999" android:state_checked="false" />
 </selector>
 
