--- a/app/src/main/res/layout/plex_activity_main.xml
+++ b/app/src/main/res/layout/plex_activity_main.xml
@@ -1,39 +1,31 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/grey_1000"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:translationZ="0.1dp"
-            app:elevation="0dp"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </com.google.android.material.appbar.AppBarLayout>
 
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-
-
+            android:layout_height="match_parent" />
+        <!--
+        layout_behavior 响应滑动时行为
+        -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/plex_bottom_navgation_bg"
-            app:itemIconSize="19dp"
+            android:state_enabled="@color/white"
+            app:itemIconSize="16dp"
             app:itemIconTint="@color/plex_bottom_navgation_state_press"
+            app:itemTextColor="@color/plex_bottom_navgation_state_press"
             app:itemTextAppearanceActive="@style/PlexBottomNavigationView.Active"
             app:itemTextAppearanceInactive="@style/PlexBottomNavigationView.Inactive"
-            app:itemTextColor="@color/plex_bottom_navgation_bg"
+            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
