--- a/app/src/main/res/menu/plex_bottom.xml
+++ b/app/src/main/res/menu/plex_bottom.xml
@@ -7,22 +7,20 @@
         android:title="@string/home" />
 
     <item
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/ic_search"
+        android:iconTint="@color/white"
+        android:menuCategory="secondary"
+        android:title="@string/discover" />
+
+    <item
         android:id="@+id/navigation_browse"
         android:icon="@drawable/ic_apps"
         android:menuCategory="secondary"
         android:title="@string/library" />
-    <!--
-        <item
-            android:id="@+id/navigation_search"
-            android:icon="@drawable/ic_search"
-            android:iconTint="@color/white"
-            android:menuCategory="secondary"
-            android:title="@string/discover" />
 
 
-
-
-        <item
+    <!--    <item
             android:id="@+id/navigation_live"
             android:icon="@drawable/ic_live"
             android:iconTint="@color/white"
@@ -42,8 +40,6 @@
             android:icon="@drawable/ic_movie"
             android:iconTint="@color/white"
             android:menuCategory="secondary"
-            android:title="@string/upcoming" />
-    -->
-
+            android:title="@string/upcoming" />-->
 
 </menu>
