1. Rxjava调整 2. room primary key 要用public修饰,不然编译报错 3. 依赖调整

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -84,4 +84,7 @@
     <color name="fragment_featured_end">#1a1a1a</color>
     <color name="fragment_featured_overlay_center">#6626262d</color>
     <color name="fragment_featured_overlay_start">#0026262d</color>
+    <color name="fragment_content_detail_overlay_end">#1a1a1a</color>
+    <color name="fragment_content_detail_overlay_center">#6626262d</color>
+    <color name="fragment_content_detail_overlay_start">#0026262d</color>
 </resources>
