--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -100,4 +100,12 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="H100">
+        <item name="android:textSize">11dp</item>
+        <item name="android:textColor">#fff0f1f5</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:lineSpacingExtra">1dp</item>
+        <item name="android:alpha">0.9</item>
+    </style>
+
 </resources>
