--- a/app/src/main/res/layout/activity_serie_details_activity.xml
+++ b/app/src/main/res/layout/activity_serie_details_activity.xml
@@ -7,8 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey_1000"
-        tools:context=".app.plex.ui.SerieDetailsActivity">
-        <!--  -->
+        tools:context=".app.plex.ui.MediaDetailsActivity">
+        <!-- 标题栏 -->
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
@@ -59,14 +59,6 @@
             android:visibility="visible">
 
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="600dp"
-                android:alpha="0.3"
-                android:background="@drawable/fragment_content_detail_top"
-                android:contentDescription="@string/image"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop" />
 
             <ImageView
                 android:id="@+id/image_movie_poster"
@@ -76,17 +68,6 @@
                 android:contentDescription="@string/image"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop" />
-
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:background="@drawable/fragment_content_detail_overlay"
-                android:contentDescription="@string/image"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.5" />
 
 
             <androidx.core.widget.NestedScrollView
@@ -125,15 +106,12 @@
                         android:visibility="visible"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
-
-
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:padding="5dp"
                             app:srcCompat="@drawable/ic_play"
                             app:tint="@color/white" />
-
                         <TextView
                             android:id="@+id/resumePlay_title"
                             android:layout_width="wrap_content"
@@ -143,8 +121,6 @@
                             android:text="@string/sort_by"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
-
-
                     </RelativeLayout>
 
                     <LinearLayout
@@ -167,7 +143,6 @@
                             android:textSize="24sp"
                             app:fontFamily="sans-serif-black" />
 
-
                         <TextView
                             android:id="@+id/mrelease"
                             android:layout_width="wrap_content"
@@ -178,8 +153,6 @@
                             android:textColor="@color/grey_11"
                             android:textSize="24sp"
                             app:fontFamily="sans-serif-black" />
-
-
                     </LinearLayout>
 
 
@@ -195,8 +168,6 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:orientation="horizontal">
-
-
                             <RatingBar
                                 android:id="@+id/rating_bar"
                                 style="?android:attr/ratingBarStyleSmall"
@@ -206,8 +177,6 @@
                                 android:numStars="5"
                                 android:rating="4.0"
                                 android:stepSize="0.1" />
-
-
                             <TextView
                                 android:id="@+id/view_movie_rating"
                                 style="@style/H100"
@@ -219,8 +188,6 @@
                                 android:paddingStart="7dp"
                                 android:paddingEnd="7dp"
                                 android:text="@string/movie_rating" />
-
-
                             <TextView
                                 android:id="@+id/view_movie_views"
                                 style="@style/H100"
@@ -232,10 +199,7 @@
                                 android:paddingStart="7dp"
                                 android:paddingEnd="7dp"
                                 android:text="@string/movie_rating" />
-
                         </LinearLayout>
-
-
                     </LinearLayout>
 
 
@@ -304,8 +268,6 @@
                             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle.Inverse"
                             android:textColor="@color/grey_11"
                             android:textSize="12sp" />
-
-
                     </LinearLayout>
 
 
@@ -388,8 +350,6 @@
                                     android:contentDescription="@string/image"
                                     app:srcCompat="@drawable/ic_report"
                                     app:tint="@color/white" />
-
-
                             </LinearLayout>
 
 
@@ -457,7 +417,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recycler_view_episodes"
                             android:layout_width="match_parent"
@@ -466,32 +425,18 @@
                             android:layout_marginBottom="100dp"
                             android:scrollbars="vertical"
                             android:scrollingCache="true" />
-
-
                     </LinearLayout>
-
-
                 </LinearLayout>
-
 
             </androidx.core.widget.NestedScrollView>
 
-            <!-- 加载状态View -->
-            <LinearLayout
+            <com.onion.android.app.plex.ui.view.ViewLoadingDotsBounce
                 android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:layout_gravity="center"
-                android:layout_margin="@dimen/spacing_medium"
-                android:orientation="vertical">
-
-                <com.onion.android.app.plex.ui.view.ViewLoadingDotsBounce
-                    android:layout_width="50dp"
-                    android:layout_height="40dp"
-                    android:background="@color/main_color" />
-
-            </LinearLayout>
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@color/main_color"
+                android:orientation="horizontal" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
