--- a/app/src/main/res/layout/plex_fragment_home.xml
+++ b/app/src/main/res/layout/plex_fragment_home.xml
@@ -82,16 +82,15 @@
                                 app:ci_height="2dp"
                                 app:ci_margin="3dp"
                                 app:ci_width="8dp" />
-                            <!-- 最新影片 -->
+                            <!-- 最新频道 -->
                             <LinearLayout
-                                android:id="@+id/linear_latest_channels"
+                                android:id="@+id/ll_latest_channels"
                                 android:layout_width="match_parent"
                                 android:layout_height="30dp"
                                 android:gravity="center_vertical"
                                 android:orientation="horizontal">
 
                                 <ImageView
-                                    android:id="@+id/linear_latest_channels_image"
                                     android:layout_width="5dp"
                                     android:layout_height="@dimen/pixel_20dp"
                                     android:background="@drawable/row"
@@ -129,6 +128,237 @@
                                 android:layout_marginStart="@dimen/pixel_15dp"
                                 android:layout_marginBottom="@dimen/spacing_large"
                                 android:nestedScrollingEnabled="false" />
+                            <!-- 最新推荐 -->
+                            <LinearLayout
+                                android:id="@+id/ll_recommend_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="5dp"
+                                    android:layout_height="@dimen/pixel_20dp"
+                                    android:background="@drawable/row"
+                                    android:backgroundTint="@color/golden_gate"
+                                    android:contentDescription="@string/image" />
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_weight="1"
+                                    android:text="@string/recommend_movie"
+                                    android:textAllCaps="true"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                                    android:textColor="@color/grey_11"
+                                    android:textSize="12sp"
+                                    app:fontFamily="sans-serif-black" />
+
+                                <ImageView
+                                    android:id="@+id/recommend_all"
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:background="@drawable/ic_apps"
+                                    android:backgroundTint="@color/main_color"
+                                    android:gravity="center"
+                                    android:minWidth="0dp"
+                                    android:padding="5dp" />
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rv_recommend_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/pixel_15dp"
+                                android:layout_marginBottom="@dimen/spacing_large"
+                                android:nestedScrollingEnabled="false" />
+                            <!-- 最新流行 -->
+                            <LinearLayout
+                                android:id="@+id/ll_trending_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="5dp"
+                                    android:layout_height="@dimen/pixel_20dp"
+                                    android:background="@drawable/row"
+                                    android:backgroundTint="@color/golden_gate"
+                                    android:contentDescription="@string/image" />
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_weight="1"
+                                    android:text="@string/trending_movie"
+                                    android:textAllCaps="true"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                                    android:textColor="@color/grey_11"
+                                    android:textSize="12sp"
+                                    app:fontFamily="sans-serif-black" />
+
+                                <ImageView
+                                    android:id="@+id/trending_all"
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:background="@drawable/ic_apps"
+                                    android:backgroundTint="@color/main_color"
+                                    android:gravity="center"
+                                    android:minWidth="0dp"
+                                    android:padding="5dp" />
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rv_trending_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/pixel_15dp"
+                                android:layout_marginBottom="@dimen/spacing_large"
+                                android:nestedScrollingEnabled="false" />
+                            <!-- 最新发布 -->
+                            <LinearLayout
+                                android:id="@+id/ll_release_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="5dp"
+                                    android:layout_height="@dimen/pixel_20dp"
+                                    android:background="@drawable/row"
+                                    android:backgroundTint="@color/golden_gate"
+                                    android:contentDescription="@string/image" />
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_weight="1"
+                                    android:text="@string/release_movie"
+                                    android:textAllCaps="true"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                                    android:textColor="@color/grey_11"
+                                    android:textSize="12sp"
+                                    app:fontFamily="sans-serif-black" />
+
+                                <ImageView
+                                    android:id="@+id/release_all"
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:background="@drawable/ic_apps"
+                                    android:backgroundTint="@color/main_color"
+                                    android:gravity="center"
+                                    android:minWidth="0dp"
+                                    android:padding="5dp" />
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rv_release_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/pixel_15dp"
+                                android:layout_marginBottom="@dimen/spacing_large"
+                                android:nestedScrollingEnabled="false" />
+                            <!-- 流行剧集 -->
+                            <LinearLayout
+                                android:id="@+id/ll_popular_series"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="5dp"
+                                    android:layout_height="@dimen/pixel_20dp"
+                                    android:background="@drawable/row"
+                                    android:backgroundTint="@color/golden_gate"
+                                    android:contentDescription="@string/image" />
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_weight="1"
+                                    android:text="@string/popular_series"
+                                    android:textAllCaps="true"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                                    android:textColor="@color/grey_11"
+                                    android:textSize="12sp"
+                                    app:fontFamily="sans-serif-black" />
+
+                                <ImageView
+                                    android:id="@+id/series_all"
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:background="@drawable/ic_apps"
+                                    android:backgroundTint="@color/main_color"
+                                    android:gravity="center"
+                                    android:minWidth="0dp"
+                                    android:padding="5dp" />
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rv_popular_series"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/pixel_15dp"
+                                android:layout_marginBottom="@dimen/spacing_large"
+                                android:nestedScrollingEnabled="false" />
+                            <!-- 最受欢迎 -->
+                            <LinearLayout
+                                android:id="@+id/ll_popular_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:gravity="center_vertical"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="5dp"
+                                    android:layout_height="@dimen/pixel_20dp"
+                                    android:background="@drawable/row"
+                                    android:backgroundTint="@color/golden_gate"
+                                    android:contentDescription="@string/image" />
+
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_weight="1"
+                                    android:text="@string/popular_movie"
+                                    android:textAllCaps="true"
+                                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                                    android:textColor="@color/grey_11"
+                                    android:textSize="12sp"
+                                    app:fontFamily="sans-serif-black" />
+
+                                <ImageView
+                                    android:id="@+id/movies_all"
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:layout_marginEnd="10dp"
+                                    android:background="@drawable/ic_apps"
+                                    android:backgroundTint="@color/main_color"
+                                    android:gravity="center"
+                                    android:minWidth="0dp"
+                                    android:padding="5dp" />
+                            </LinearLayout>
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rv_popular_movies"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/pixel_15dp"
+                                android:layout_marginBottom="@dimen/spacing_large"
+                                android:nestedScrollingEnabled="false" />
+
                         </LinearLayout>
                     </androidx.core.widget.NestedScrollView>
                 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
