build plex movies

--- a/app/src/main/res/layout/activity_movie_details_activity.xml
+++ b/app/src/main/res/layout/activity_movie_details_activity.xml
@@ -39,7 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="@string/seasons"
+                    android:visibility="gone"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textColor="@color/grey_11"
