--- a/app/src/main/res/layout/plex_fragment_library.xml
+++ b/app/src/main/res/layout/plex_fragment_library.xml
@@ -4,6 +4,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:background="@color/plex_item_bg"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
@@ -19,6 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:contentInsetStartWithNavigation="0dp"
+                android:elevation="4dp"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -35,19 +37,20 @@
                         android:layout_height="100dp"
                         android:contentDescription="@string/image" />
                 </RelativeLayout>
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tab_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabGravity="fill"
+                    app:tabIndicatorColor="@color/main_color"
+                    app:tabIndicatorHeight="3dp"
+                    app:tabMode="fixed"
+                    app:tabSelectedTextColor="@color/golden_gate"
+                    app:tabTextAppearance="@style/TextAppearance.Design.Tab"
+                    app:tabTextColor="@color/grey_20" />
             </androidx.appcompat.widget.Toolbar>
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabGravity="fill"
-                app:tabIndicatorColor="@color/main_color"
-                app:tabIndicatorHeight="3dp"
-                app:tabMode="fixed"
-                app:tabSelectedTextColor="@color/golden_gate"
-                app:tabTextAppearance="@style/TextAppearance.Design.Tab"
-                app:tabTextColor="@color/grey_20" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.viewpager2.widget.ViewPager2
