--- a/app/src/main/res/layout/pokedex_activity_main.xml
+++ b/app/src/main/res/layout/pokedex_activity_main.xml
@@ -56,6 +56,7 @@
             android:id="@+id/progressbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:progressDrawable="@color/colorPrimary"
             android:outlineAmbientShadowColor="@color/colorPrimary"
             android:outlineSpotShadowColor="@color/colorPrimary"
             app:gone="@{!vm.loading &amp;&amp; adapter.submitted}"
