--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -102,6 +102,23 @@
         <item name="android:thumb">@drawable/tubi_tv_drawable_scrubber_selector</item>
     </style>
 
+    <style name="MyAlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:colorBackground">#424242</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowMinWidthMajor">@android:dimen/dialog_min_width_major</item>
+        <item name="android:windowMinWidthMinor">@android:dimen/dialog_min_width_minor</item>
+        <item name="android:background">@drawable/tv_auto_play_overlay</item>
+        <item name="android:colorPrimary">#ffffff</item>
+        <item name="android:colorAccent">@color/main_color</item>
+        <item name="colorAccent">@color/main_color</item>
+        <item name="android:textSize">16sp</item>
+        <item name="textColorAlertDialogListItem">#b3b3b3</item>
+        <item name="android:textColor">#e6e6e6</item>
+        <item name="android:textColorPrimary">#FFFFFF</item>
+    </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
