--- a/app/src/main/res/layout/plex_item_featured.xml
+++ b/app/src/main/res/layout/plex_item_featured.xml
@@ -123,7 +123,7 @@
                             android:layout_margin="@dimen/spacing_middle"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="@string/image"
-                            app:srcCompat="@mipmap/add_from_queue" />
+                            app:srcCompat="@drawable/add_from_queue" />
                     </LinearLayout>
 
                     <LinearLayout
