--- a/onionui/src/main/res/values/themes.xml
+++ b/onionui/src/main/res/values/themes.xml
@@ -13,4 +13,59 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.TMessages" parent="Theme.MaterialComponents.Light">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBarOverlay">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:colorBackground">@android:color/white</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:itemTextAppearance">@style/ActionBar.Transparent.TMessages.Item</item>
+        <item name="android:listViewStyle">@style/Theme.TMessages.ListView</item>
+        <item name="android:colorPrimaryDark">#33000000</item>
+        <item name="android:colorPrimary">#527da3</item>
+        <item name="android:alertDialogTheme">@style/Theme.TMessages.Dialog.Alert</item>
+        <item name="android:colorControlActivated">#808080</item>
+        <item name="android:textColorHighlight">#60808080</item>
+        <item name="android:datePickerStyle">@style/Theme.TMessages.DatePicker</item>
+        <item name="android:datePickerDialogTheme">@style/Theme.TMessages.Dialog.Alert</item>
+        <item name="android:timePickerStyle">@style/Theme.TMessages.TimePicker</item>
+        <item name="android:timePickerDialogTheme">@style/Theme.TMessages.Dialog.Alert</item>
+        <!-- 日历样式 https://www.jianshu.com/p/4cb42e6e5de3 -->
+        <item name="android:calendarViewStyle">@style/Theme.TMessages.CalendarView</item>
+        <!-- 底部导航栏的颜色 -->
+        <item name="android:navigationBarColor">#000000</item>
+        <!-- listview items style-->
+        <item name="android:listChoiceBackgroundIndicator">@drawable/list_selector_ex</item>
+        <!-- ActionBar https://www.bbsmax.com/A/gVdnEm275W/-->
+        <!-- 每个溢出菜单item的样式  -->
+        <item name="android:actionBarItemBackground">@drawable/bar_selector_style</item>
+        <item name="android:textViewStyle">@style/MyTextViewStyle</item>
+    </style>
+
+    <!-- 时间控件主题 -->
+
+    <style name="Theme.TMessages.DayOfWeek" parent="@android:style/TextAppearance.Material.Caption">
+        <item name="android:textSize">0sp</item>
+        <item name="android:textColor">#00000000</item>
+    </style>
+
+    <style name="Theme.TMessages.CalendarView" parent="@android:style/Widget.Material.CalendarView">
+        <item name="android:weekDayTextAppearance">@style/Theme.TMessages.DayOfWeek</item>
+    </style>
+
+    <style name="Theme.TMessages.DatePicker" parent="@android:style/Widget.Material.Light.DatePicker">
+        <item name="android:headerBackground">#408bc8</item>
+    </style>
+
+    <style name="Theme.TMessages.TimePicker" parent="@android:style/Widget.Material.Light.TimePicker">
+        <item name="android:headerBackground">#408bc8</item>
+    </style>
+
+    <!-- 文字样式 http://dljz.nicethemes.cn/news/show-30328.html -->
+    <!-- android:hyphenationFrequency：连词符的频率，“normal”：适用于聊天消息，“none”：没有连字符，“full”：标准连词符-->
+    <style name="MyTextViewStyle" parent="android:Widget.Material.Light.TextView">
+        <item name="android:hyphenationFrequency" tools:ignore="NewApi">none</item>
+    </style>
 </resources>
