--- a/onionui/src/main/res/values/themes.xml
+++ b/onionui/src/main/res/values/themes.xml
@@ -1,33 +1,44 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.AndroidShow" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
+        <!--主面板颜色 -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
+        <!-- 次面板颜色 -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <!-- 状态栏颜色 -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.TMessages" parent="Theme.MaterialComponents.Light">
+        <!--设置取消标题栏-->
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <!--设置Actionbar是否显示在内容上层 -->
         <item name="android:windowActionBarOverlay">false</item>
+        <!--市面上的其他应用启动时,只有图片背景而没有白底或者黑底就是通过这个设置的-->
         <item name="android:windowContentOverlay">@null</item>
+        <!--这个不只影响背景,还影响所有控件背景颜色 -->
         <item name="android:colorBackground">@android:color/white</item>
+        <!-- 页面背景 https://blog.csdn.net/smartzzg/article/details/104788412-->
         <item name="android:windowBackground">@android:color/white</item>
+        <!-- 标题栏Item -->
         <item name="android:itemTextAppearance">@style/ActionBar.Transparent.TMessages.Item</item>
         <item name="android:listViewStyle">@style/Theme.TMessages.ListView</item>
+        <!-- 状态栏颜色 -->
         <item name="android:colorPrimaryDark">#33000000</item>
+        <!-- AppBar的背景色-->
         <item name="android:colorPrimary">#527da3</item>
-        <item name="android:alertDialogTheme">@style/Theme.TMessages.Dialog.Alert</item>
+        <!-- 设置某些控制器激活时候的颜色（CheckBox，EditText的textSelectHandle，Switch），默认使用主题色中的colorAccent-->
         <item name="android:colorControlActivated">#808080</item>
+        <!-- 被选中文字的底色 -->
         <item name="android:textColorHighlight">#60808080</item>
+        <!-- 系统时间控件样式 -->
+        <item name="android:alertDialogTheme">@style/Theme.TMessages.Dialog.Alert</item>
         <item name="android:datePickerStyle">@style/Theme.TMessages.DatePicker</item>
         <item name="android:datePickerDialogTheme">@style/Theme.TMessages.Dialog.Alert</item>
         <item name="android:timePickerStyle">@style/Theme.TMessages.TimePicker</item>
@@ -44,8 +55,20 @@
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
     </style>
 
-    <!-- 时间控件主题 -->
+    <!-- ActionBar 子Item 样式  -->
+    <style name="ActionBar.Transparent.TMessages.Item" parent="android:TextAppearance.Widget.IconMenu.Item">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 
+    <!-- ListView 样式 -->
+    <style name="Theme.TMessages.ListView" parent="@android:style/Widget.Material.Light.ListView">
+        <item name="android:fadingEdge">none</item>
+        <item name="android:dividerHeight">1dp</item>
+        <item name="android:divider">@color/divider</item>
+    </style>
+
+    <!-- TimeWidget样式 -->
     <style name="Theme.TMessages.DayOfWeek" parent="@android:style/TextAppearance.Material.Caption">
         <item name="android:textSize">0sp</item>
         <item name="android:textColor">#00000000</item>
@@ -63,7 +86,13 @@
         <item name="android:headerBackground">#408bc8</item>
     </style>
 
-    <!-- 文字样式 http://dljz.nicethemes.cn/news/show-30328.html -->
+    <style name="Theme.TMessages.Dialog.Alert" parent="android:style/Theme.Material.Light.Dialog.Alert">
+        <item name="android:colorAccent">#4991cc</item>
+        <item name="android:colorPrimary">#527da3</item>
+        <item name="android:colorControlActivated">#808080</item>
+    </style>
+
+    <!-- TextView样式 http://dljz.nicethemes.cn/news/show-30328.html -->
     <!-- android:hyphenationFrequency：连词符的频率，“normal”：适用于聊天消息，“none”：没有连字符，“full”：标准连词符-->
     <style name="MyTextViewStyle" parent="android:Widget.Material.Light.TextView">
         <item name="android:hyphenationFrequency" tools:ignore="NewApi">none</item>
