--- a/app-ui/src/main/res/values/styles.xml
+++ b/app-ui/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!--Components-->
 
@@ -23,4 +25,11 @@
         <item name="itemTextAppearance">?attr/textAppearanceBody2</item>
     </style>
 
+
+    <style name="ShowButtonStyle">
+        <item name="textAllCaps">false</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:radius">9dp</item>
+    </style>
 </resources>
