--- a/app-ui/src/main/res/values/themes.xml
+++ b/app-ui/src/main/res/values/themes.xml
@@ -71,6 +71,8 @@
         <item name="android:itemTextAppearance">@style/ActionBar.Transparent.TMessages.Item</item>
         <item name="android:listViewStyle">@style/Theme.TMessages.ListView</item>
         <!-- 状态栏颜色 -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
         <item name="android:colorPrimaryDark">#33000000</item>
         <!-- AppBar的背景色-->
         <item name="android:colorPrimary">#527da3</item>
